workspace = { members = ["feed-forward", "mnist_data", "charniak_tensorflow", "word2vec"] }
[package]
name = "RustML"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feed-forward = { path = "feed-forward" }
ndarray = "0.15.6"
mnist = "0.6.0"
mnist_data = { path = "mnist_data" }
