[package]
name = "mnist_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["blocking", "json"]}
futures = "0.3.30"
zip = "1.2.3"
serde_json = "1.0.117"
ndarray = "0.15.6"
mnist = "0.6.0"